CAG-24 : Removed dependencies (to height and weight) for ECG.